# sensei

senseicore/: Cargo.toml
senseicore/src/: channels.rs  event_handler.rs  node.rs
senseicore/src/chain/: bitcoind_client.rs
senseicore/src/services/: node.rs
src/grpc/: adaptor.rs
