[package]
name = "senseicore"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "senseicore"
path = "src/lib.rs"

[dependencies]
lightning = { path = "../../rust-lightning/lightning", features = ["max_level_trace"] }
lightning-block-sync = { path = "../../rust-lightning/lightning-block-sync", features = [ "rpc-client" ] }
lightning-invoice = { path = "../../rust-lightning/lightning-invoice" }
lightning-net-tokio = { path = "../../rust-lightning/lightning-net-tokio" }
lightning-persister = { path = "../../rust-lightning/lightning-persister" }
lightning-background-processor = { path = "../../rust-lightning/lightning-background-processor" }
lightning-rapid-gossip-sync = { path = "../../rust-lightning/lightning-rapid-gossip-sync" }
base64 = "0.13.0"
bitcoin = { version = "0.28.1" }
bitcoin-bech32 = "0.12"
bech32 = "0.8"
futures = "0.3"
chrono = "0.4"
rand = "0.8.4"
tower = { version = "0.4", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }
log = "0.4.16"
bitcoincore-rpc = "0.15"
bdk = "0.22"
pin-project = "1.0"
hyper = "0.14"
bcrypt = "0.13.0"
tindercrypt = { version = "0.3.2", default-features = false }
uuid = { version = "0.8", features = ["serde", "v4"] }
macaroon = "0.2"
dirs = "4.0"
public-ip = "0.2"
entity = { path = "../entity" }
migration = { path = "../migration" }
reqwest = { version = "0.11", default-features = false, features = [ "json", "rustls-tls-webpki-roots" ] }
base32 = "0.4.0"
socks = "0.3.4"

[dev-dependencies]
bitcoind = { version = "0.26", features = [ "22_0" ] }
serial_test = "0.6.0"
